Funciona parcialmente las rutas e intenta corregir el error de las ghost views

--- a/app/scripts/templates/home.hbs
+++ b/app/scripts/templates/home.hbs
@@ -12,9 +12,9 @@
     </nav>
     <div class="nav">
     	<ul class="nav nav-pills navbar-default">
-    		<li data-value="all" class="available-menu active"><a href="#">All</a></li>
-    		<li data-value="available" class="available-menu"><a href="#">Available</a></li>
-    		<li data-value="borrowed" class="available-menu"><a href="#">Borrowed</a></li>
+    		<li data-value="all" class="available-menu active"><a>All</a></li>
+    		<li data-value="available" class="available-menu"><a>Available</a></li>
+    		<li data-value="borrowed" class="available-menu"><a>Borrowed</a></li>
     	</ul>
     </div>
 </div>
