--- a/app/scripts/templates/home.hbs
+++ b/app/scripts/templates/home.hbs
@@ -1,7 +1,7 @@
 <div class="row">
     <nav id="comic-menu" class="navbar navbar-inverse" role="navigation">
     	<ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="">Home</a></li>
             <li id="genre-menu" class="dropdown">
             	<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" href="#">Genres<span class="caret"></span></a>
             </li>
