Se ajusta para que el enrutamiento funcione correctamente y se cargan las listas de los mas populares desde un json cargado por ajax

--- a/app/scripts/templates/home.hbs
+++ b/app/scripts/templates/home.hbs
@@ -28,30 +28,15 @@
         </div>
         <div class="panel panel-default">
         	<div class="panel-heading">By qualification</div>
-            <ul class="list-group">
-            	<li><a class="list-group-item">1. Batman</a></li>
-            	<li><a class="list-group-item">2. Batman</a></li>
-            	<li><a class="list-group-item">3. Batman</a></li>
-            	<li><a class="list-group-item">4. Batman</a></li>
-            </ul>
+            <ul id="qualification-menu" class="list-group"></ul>
         </div>
         <div class="panel panel-default">
         	<div class="panel-heading">By top search</div>
-            <ul class="list-group">
-            	<li><a class="list-group-item">1. Batman</a></li>
-            	<li><a class="list-group-item">2. Batman</a></li>
-            	<li><a class="list-group-item">3. Batman</a></li>
-            	<li><a class="list-group-item">4. Batman</a></li>
-            </ul>
+            <ul id="top-search-menu" class="list-group"></ul>
         </div>
         <div class="panel panel-default">
         	<div class="panel-heading">By recommended</div>
-            <ul class="list-group">
-            	<li><a class="list-group-item">1. Batman</a></li>
-            	<li><a class="list-group-item">2. Batman</a></li>
-            	<li><a class="list-group-item">3. Batman</a></li>
-            	<li><a class="list-group-item">4. Batman</a></li>
-            </ul>
+            <ul id="recommended-menu" class="list-group"></ul>
         </div>
     </aside>
 </div>
