--- a/app/scripts/templates/login.hbs
+++ b/app/scripts/templates/login.hbs
@@ -6,6 +6,9 @@
 			</div>
 			<div class="panel-body">
 				<div class="well col-lg-6 pull-right">
+					<div class="alert alert-danger hide">
+						<span class="glyphicon glyphicon-remove"></span><strong>User or password incorrect.</strong>
+					</div>
 					<div style="margin-bottom: 25px" class="input-group">
 						<span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
 						<input id="login-username" type="text" class="form-control" name="username" value="" placeholder="username">                                        
@@ -37,7 +40,7 @@
                           	<span class="fa fa-check text-success"></span> Easy search
                           </li>
                       </ul>
-                      <p><a href="/new-customer/" class="btn btn-info btn-block">Yes please, register now!</a></p>
+                      <p><a href="#!/register" class="btn btn-info btn-block">Yes please, register now!</a></p>
 				</div>
 			</div>
 		</div>
