Se ajusta home.js para que tenga full soporte a subvistas, se agrega titulos a las subvistas y se agrega la vista characters.

--- a/app/scripts/templates/characters.hbs
+++ b/app/scripts/templates/characters.hbs
@@ -1,15 +1,12 @@
+<div class="well well-title"><h4><strong>Characters</strong></h4></div>
 <div class="row">
-	{{#each comics}}
+	{{#each characters}}
 		<articule class="col-xs-6 col-md-3">
 			
 			<div class="thumbnail">
 				<img src="{{url}}" alt="comic image">
 				<div class="caption">
 					<h6>{{name}}</h6>
-					<p>
-						<a href="#" class="btn btn-primary btn-sm {{disabled (not available)}}" role="button">Rent</a>
-						<a href="#" class="btn btn-default btn-sm" role="button">Details</a>
-					</p>
 				</div>
 			</div>
 		</articule>
