--- a/app/scripts/templates/comiclist.hbs
+++ b/app/scripts/templates/comiclist.hbs
@@ -1,3 +1,4 @@
+<div class="well well-title"><h4><strong>{{title}}</strong></h4></div>
 <div class="row">
 	{{#each comics}}
 		<articule class="col-xs-6 col-md-3">
