--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -130,6 +130,16 @@ body {
 	overflow: hidden;
 }
 
+.well-title {
+	padding: 0;
+	margin-bottom: 15px;
+}
+
+.well-title h4 {
+	padding: 5px;
+	margin: 0px;
+}
+
 body {
 	/*background: url(https://www-images.comixology.com/images/marvel/main_bg.jpg);*/
 }
