--- a/app/scripts/templates/home.hbs
+++ b/app/scripts/templates/home.hbs
@@ -1,16 +1,16 @@
 <div class="row">
     <nav id="comic-menu" class="navbar navbar-inverse" role="navigation">
     	<ul class="nav navbar-nav">
-            <li class="active"><a href="">Home</a></li>
+            <li class="active"><a href="#">Home</a></li>
             <li id="genre-menu" class="dropdown">
             	<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" href="#">Genres<span class="caret"></span></a>
             </li>
             <li><a href="#">Editions</a></li>
             <li><a href="#">New</a></li>
-            <li><a href="#">Characters</a></li>
+            <li><a href="#!/characters">Characters</a></li>
         </ul>
     </nav>
-    <div class="nav">
+    <div id="available-menu" class="nav">
     	<ul class="nav nav-pills navbar-default">
     		<li data-value="all" class="available-menu active"><a>All</a></li>
     		<li data-value="available" class="available-menu"><a>Available</a></li>
