Se agrega la vista detalle de los comics

--- a/app/scripts/templates/register.hbs
+++ b/app/scripts/templates/register.hbs
@@ -1,7 +1,7 @@
 <div class="row marketing">
 	<div class="col-lg-8 col-lg-offset-2">
 		<div class="alert alert-success hide">
-			<strong><span class="glyphicon glyphicon-ok"></span> Register complete!</strong>
+			<strong><span class="glyphicon glyphicon-ok"></span> Register complete! Redirecting to login.</strong>
 		</div>
 		<div class="alert alert-danger alert-fields hide">
 			<span class="glyphicon glyphicon-remove"></span><strong> Error! Please check all fields.</strong>
