--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -140,6 +140,10 @@ body {
 	margin: 0px;
 }
 
+.comic-image-detail {
+	margin: 1em 40px;
+}
+
 body {
 	/*background: url(https://www-images.comixology.com/images/marvel/main_bg.jpg);*/
 }
