--- a/app/scripts/templates/comiclist.hbs
+++ b/app/scripts/templates/comiclist.hbs
@@ -2,17 +2,17 @@
 <div class="row">
 	{{#each comics}}
 		<articule class="col-xs-6 col-md-3">
-			
+			<a href="#!/comic/detail/{{id}}">
 			<div class="thumbnail">
 				<img src="{{url}}" alt="comic image">
 				<div class="caption">
 					<h6>{{name}}</h6>
 					<p>
-						<a href="#" class="btn btn-primary btn-sm {{disabled (not available)}}" role="button">Rent</a>
-						<a href="#" class="btn btn-default btn-sm" role="button">Details</a>
+						<a href="#" class="btn btn-primary btn-sm btn-block {{disabled (not available)}}" role="button">Borrow</a>
 					</p>
 				</div>
 			</div>
+			</a>
 		</articule>
 		{{#unless @last}}
 			{{#ifmodeqzero @index 4}}
