--- a/app/scripts/templates/popular.hbs
+++ b/app/scripts/templates/popular.hbs
@@ -1,3 +1,3 @@
 {{#each popular}}
-	<li><a class="list-group-item cut">{{inc @index}}. {{name}}</a></li>
+	<li><a class="list-group-item cut" href="#!/comic/detail/{{id}}">{{inc @index}}. {{name}}</a></li>
 {{/each}}
