--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -144,6 +144,34 @@ body {
 	margin: 1em 40px;
 }
 
+.character-image-detail {
+	margin: 1em 40px;
+}
+
+.character-image-detail img {
+	height: 300px;
+}
+
+.character-articule {
+	margin-left: 40px;
+}
+
+.character-menu {
+	margin-top: 40px;
+}
+
+.comics-borrowed {
+	margin-left: 40px;
+}
+
+.comic-item {
+	margin-left: 15px;
+	margin-bottom: 10px;
+	padding: 5px 15px;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+}
+
 body {
 	/*background: url(https://www-images.comixology.com/images/marvel/main_bg.jpg);*/
 }
