Se agrega la funcionalidad de comentarios y prestamos

--- a/app/scripts/templates/comiclist.hbs
+++ b/app/scripts/templates/comiclist.hbs
@@ -8,7 +8,7 @@
 				<div class="caption">
 					<h6>{{name}}</h6>
 					<p>
-						<a href="#" class="btn btn-primary btn-sm btn-block {{disabled (not available)}}" role="button">Borrow</a>
+						<a data-value="{{id}}" class="borrow btn btn-primary btn-sm btn-block {{disabled (not available)}}" role="button">Borrow</a>
 					</p>
 				</div>
 			</div>
