--- a/app/scripts/templates/loginMenu.hbs
+++ b/app/scripts/templates/loginMenu.hbs
@@ -4,7 +4,7 @@
 		<img alt="{{fullName}} Profile" src="https://cdn4.iconfinder.com/data/icons/small-n-flat/24/user-alt-16.png"><span class="caret"></span>
 	</a>
 	<ul class="dropdown-menu" role="menu">
-		<li id="menu-profile"><a href="#">Profile</a></li>
+		<li id="menu-profile"><a href="#!/profile">Profile</a></li>
 		<li class="divider"></li>
 		<li id="menu-logout"><a href="#">Logout</a></li>
 	</ul>
