--- a/app/scripts/templates/profile.hbs
+++ b/app/scripts/templates/profile.hbs
@@ -1,7 +1,7 @@
 <div class="row marketing">
 	<div class="col-lg-4">
 		<figure>
-			<img src="{{picture}}" alt="User Picture" />
+			<img class="profile-picture" src="{{picture}}" alt="User Picture" />
 		</figure>
 	</div>
 	<div class="col-lg-6">
@@ -27,40 +27,35 @@
 
 <div class="comics-borrowed clearfix">
 	<h4>Comics Borrowed</h4>
+	{{#each comics}}
 	<div class="row comic-item col-lg-11">
 		<div class="media">
 			<a class="pull-left" href="#">
-				<img src="https://annihilusssl.sslcs.cdngc.net/c/DIG030905_3.jpg?h=786695942966cc2ce583546b76710ee7&width=120" alt="Comic Image" />
+				<img src="{{url}}" alt="Comic Image" />
 			</a>
 			<div class="media-body">
 				<h4>Name</h4>
-				<span>All-New Captain America (2014-) #1</span>
+				<span>{{name}}</span>
 				<h4>Synopsis</h4>
-				<span>This is it! The all-new, Spy-Fi, highflying adventures of Sam Wilson Captain America and Nomad begin here! Hydra is growing, the terrorist band have has infiltrated the Marvel Universe completely! But what is their ultimate goal?</span>
+				<span>{{synopsis}}</span>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-lg-11">
 				<h4>Last Comments</h4>
 				<div class="list-group">
+					{{#each comments}}
 					<a class="list-group-item">
-						<h5 class="list-group-item-heading">nitro</h5>
-						<p class="list-group-item-text">Great comic!</p>
+						<h5 class="list-group-item-heading">{{userName}}</h5>
+						<p class="list-group-item-text">{{comment}}</p>
 					</a>
-					<a class="list-group-item">
-						<h5 class="list-group-item-heading">nitro</h5>
-						<p class="list-group-item-text">Great comic!</p>
-					</a>
-					<a class="list-group-item">
-						<h5 class="list-group-item-heading">nitro</h5>
-						<p class="list-group-item-text">Great comic!</p>
-					</a>
+					{{/each}}
 					<a class="list-group-item">
 						<h5 class="list-group-item-heading">Add Comment</h5>
 						<div class="input-group">
-							<input type="text" class="form-control">
+							<input type="text" id="comment-add-{{id}}" class="form-control">
 							<span class="input-group-btn">
-								<button class="btn btn-primary" type="button">Comment</button>
+								<button data-value="{{id}}" class="comic-comment btn btn-primary" type="button">Comment</button>
 							</span>
 						</div>
 					</a>
@@ -68,45 +63,5 @@
 			</div>
 		</div>
 	</div>
-	<div class="row comic-item col-lg-11">
-		<div class="media">
-			<a class="pull-left" href="#">
-				<img src="https://annihilusssl.sslcs.cdngc.net/c/DIG030905_3.jpg?h=786695942966cc2ce583546b76710ee7&width=120" alt="Comic Image" />
-			</a>
-			<div class="media-body">
-				<h4>Name</h4>
-				<span>All-New Captain America (2014-) #1</span>
-				<h4>Synopsis</h4>
-				<span>This is it! The all-new, Spy-Fi, highflying adventures of Sam Wilson Captain America and Nomad begin here! Hydra is growing, the terrorist band have has infiltrated the Marvel Universe completely! But what is their ultimate goal?</span>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-lg-11">
-				<h4>Last Comments</h4>
-				<div class="list-group">
-					<a class="list-group-item">
-						<h5 class="list-group-item-heading">nitro</h5>
-						<p class="list-group-item-text">Great comic!</p>
-					</a>
-					<a class="list-group-item">
-						<h5 class="list-group-item-heading">nitro</h5>
-						<p class="list-group-item-text">Great comic!</p>
-					</a>
-					<a class="list-group-item">
-						<h5 class="list-group-item-heading">nitro</h5>
-						<p class="list-group-item-text">Great comic!</p>
-					</a>
-					<a class="list-group-item">
-						<h5 class="list-group-item-heading">Add Comment</h5>
-						<div class="input-group">
-							<input type="text" class="form-control">
-							<span class="input-group-btn">
-								<button class="btn btn-primary" type="button">Comment</button>
-							</span>
-						</div>
-					</a>
-				</div>
-			</div>
-		</div>
-	</div>
+	{{/each}}
 </div>
